substitute the heap with a list

--- a/topology1.cfg
+++ b/topology1.cfg
@@ -1,16 +1,16 @@
 //number of peers
-peers = 100;
+peers = 4;
 
 //density of the connections number from 0 to 1
-connection = 0.05;
+connection = 0.3;
 
 //witch peer log and in witch way
 logger =  {
   p2 = {stdout = true;},
-  p100 = {stdout = true;},
-  p3 = {filename = "pippo.log";},
-  p5 = {filename = "pippo.log";},
-  p6 = {filename = "pippo.log";},
-  p40 = {filename = "pippo2.log";},
-  topology = {stdout = "topology.log";}
+  //p100 = {stdout = true;},
+  //p3 = {filename = "pippo.log";},
+  //p5 = {filename = "pippo.log";},
+  //p6 = {filename = "pippo.log";},
+  //p40 = {filename = "pippo2.log";},
+  topology = {stdout = true;}
 };
