--- a/topology1.cfg
+++ b/topology1.cfg
@@ -4,13 +4,17 @@ peers = 4;
 //density of the connections number from 0 to 1
 connection = 0.3;
 
+//random send
+srand = 12398129038
+
 //witch peer log and in witch way
-logger =  {
+peer_logger =  {
   p2 = {stdout = true;},
   //p100 = {stdout = true;},
   //p3 = {filename = "pippo.log";},
   //p5 = {filename = "pippo.log";},
   //p6 = {filename = "pippo.log";},
   //p40 = {filename = "pippo2.log";},
-  topology = {stdout = true;}
+  topology = {stdout = true;},
+  step = {stdout = true}
 };
