fix pointer problems

--- a/topology1.cfg
+++ b/topology1.cfg
@@ -1,20 +1,19 @@
 //number of peers
-peers = 4;
+peers = 10;
 
 //density of the connections number from 0 to 1
-connection = 0.3;
+connection = 0.4;
 
 //random send
 srand = 12398129038
 
 //witch peer log and in witch way
-peer_logger =  {
+logger =  {
   p2 = {stdout = true;},
   //p100 = {stdout = true;},
   //p3 = {filename = "pippo.log";},
   //p5 = {filename = "pippo.log";},
   //p6 = {filename = "pippo.log";},
   //p40 = {filename = "pippo2.log";},
-  topology = {stdout = true;},
-  step = {stdout = true}
+  topology = {stdout = true;}
 };
