--- a/topology1.cfg
+++ b/topology1.cfg
@@ -1,16 +1,16 @@
 //number of peers
-peers = 10;
+peers = 20;
 
 //density of the connections number from 0 to 1
-connection = 0.4;
+connection = 0.1;
 
 //random send
-srand = 12398129038
+srand = 234234324443334
 
 //witch peer log and in witch way
 logger =  {
   p2 = {stdout = true;},
-  //p100 = {stdout = true;},
+  p10 = {stdout = true;}
   //p3 = {filename = "pippo.log";},
   //p5 = {filename = "pippo.log";},
   //p6 = {filename = "pippo.log";},
