change the structure and add the cmake

--- a/example/topology1.cfg
+++ b/example/topology1.cfg
@@ -5,7 +5,7 @@ peers = 20;
 connection = 0.1;
 
 //random send
-srand = 234234324443334
+srand = 234234324443334L
 
 //witch peer log and in witch way
 logger =  {
