update main, with same information on the message in the network

--- a/example/topology_2.cfg
+++ b/example/topology_2.cfg
@@ -4,7 +4,7 @@ peers = 50;
 //density of the connections number from 0 to 1
 connection = 0.1;
 
-//random seed
+//random seed (the L at the end represent a 64-bit long number)
 srand = 234234324443334L
 
 //witch peer log and in witch way
