fix configuration file

--- a/example/topology_1.cfg
+++ b/example/topology_1.cfg
@@ -10,6 +10,6 @@ srand = 234234324443334L
 //witch peer log and in witch way
 logger =  {
   p2 = {stdout = true;},
-  p10 = {stdout = true;}
+  p10 = {stdout = true;},
   topology = {stdout = true;}
 };
