--- a/example/topology_2.cfg
+++ b/example/topology_2.cfg
@@ -10,7 +10,7 @@ srand = 234234324443334L
 //witch peer log and in witch way
 logger =  {
   p23 = {stdout = true;},
-  p10 = {stdout = true;}
+  p10 = {stdout = true;},
   p3 = {filename = "pippo.log";},
   p15 = {filename = "pippo.log";},
   topology = {filename = "topology.log";}
